# buckbuckgo

./: .gitignore  Cargo.toml  docker-compose.yml  migration.md  package.json  pnpm-lock.yaml  turbo.json
apps/crawler/: .gitignore  Cargo.toml  config.toml
apps/crawler/config/: local.toml
apps/crawler/src/: config.rs  error.rs  fetcher.rs  lib.rs  main.rs  parser.rs  politeness.rs  spider.rs  stemmer.rs  storage.rs
apps/search-api/: .env  package.json  tsconfig.json
apps/search-api/scripts/: backfill_embeddings.ts  migrate.ts  verify_infra.ts
apps/search-api/src/: index.ts
apps/search-api/src/Config/: index.ts
apps/search-api/src/Domain/: Models.ts
apps/search-api/src/Infrastructure/: CacheLive.ts  Database.ts  EmbeddingLive.ts  RateLimiterLive.ts  RedisLive.ts  SearchLive.ts
apps/search-api/src/Service/: Cache.ts  Embedding.ts  RateLimiter.ts  Redis.ts  Search.ts
apps/web/: .gitignore  package.json  tailwind.config.js
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/components/features/search/: LanguageToggle.tsx  ResultCard.tsx  SearchInput.tsx
apps/web/hooks/: useSearch.ts
convex/: documents.ts  nlp.ts  schema.ts
infra/: docker-compose.yml
infra/postgres/init-scripts/: 01_init.sql  02_fuzzy_search.sql  03_enable_vector.sql
